			       =================
				BOGOFILTER NEWS
			       =================

$Id$

0.10.2   2003-XX-XX

	* Robustness: protect token count against overflow.
	* Portability: Switch data base handling to use uint32_t 32-bit
	  integer, to let bogofilter use the same data widths on all
	  architectures and platforms.

0.10.1.3 2003-01-29

	* Fixed problems in Graham initialization code and
	  processing of config file options.
	* Portability fixes for 64-bit machines.

0.10.1.2 2003-01-27

	* Config file example updated.
	* Fixed additional problems in parsing HTML.

0.10.1.1 2003-01-25

	* Fixed problems in parsing HTML and processing config file options.

0.10.1	2003-01-22

	* Bogofilter now kills HTML comments.  The '-k' switch can
	  be used to change the behavior.
	* Added convenience options '-2' and '-3' to set binary/ternary
	  modes when using Robinson-Fisher classification.
	* Fixed spamicity computation problem when using graham
	  wordlist and robinson or robinson-fisher algorithm.
	* Fixed problem processing mime boundaries which caused
	  an incorrect message count when processing a mailbox
	* Fixed configuration problems for building bogofilter to support
	  some, but not all, classification algorithms.

0.10.0  2003-01-19

	* Added mime processing capability, with decoding of base64,
	  quoted-printable and uuencoded sections.  Ignores attachments when
	  computing spamicity.
	* Added wordlist maintenance capability to bogoutil.  Can discard
	  tokens based on count, age, or length.  Can replace non-ASCII chars
	  with question marks.
	* Added dates to wordlist tokens.  Option "datestamp_tokens=true|false"
	  can be used to enable/disable them.
	* Moved most documentation files to doc directory.
	* Added sample procmail file, contrib/procmailrc.example
	* Spamicity score now computable from multiple word list pairs, i.e. all
	  spam and ham word lists in directories named on command line or in