@@ -1,13 +1,0 @@
-Bogopass emulates the -p (passthrough) option of bogofilter with
-base64 decoding. It takes an e-mail message on stdin, filters it
-through unbase64, then sends it to bogofilter with the "-v" option.
-The X-Bogosity header output by bogofilter is added to the original
-message by formail, and the updated message is output to stdout.
-
-Any options given to bogopass will be passed on to bogofilter along
-with "-v". For instance, call "bogopass -g" to use the Graham
-algorithm.  Do not pass -p to bogopass, as this is implied.
-
-This script requires formail (part of the procmail suite).
-
-Bogopass was written by Suzanne Skinner.
